Versiom 7.4 Reporting Enhanced txt Files Added